--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -11,12 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/txt_userId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="ID" />
+        android:text="ID"
+        android:textSize="20sp" />
+
     <TextView
         android:id="@+id/txt_nombre"
         android:layout_width="match_parent"
@@ -30,7 +33,24 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="correo"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/txt_telefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="telefono"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/txt_provider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Provider"
+        android:textSize="20sp" />
+
     <Button
         android:id="@+id/btn_logout"
         android:layout_width="match_parent"
