--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".MainActivity">
     <ImageView
         android:id="@+id/imageView"
@@ -16,7 +17,7 @@
     <TextView
         android:id="@+id/txt_"
         android:layout_width="match_parent"
-        android:layout_height="224dp"
+        android:layout_height="126dp"
         android:gravity="center"
         android:text="Inicio de Sesión con Google"
         android:textSize="24sp"
