--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".PerfilUsuario">
     <ImageView
         android:id="@+id/imv_foto"
@@ -35,21 +36,12 @@
         android:text="correo"
         android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/txt_telefono"
+    <Button
+        android:id="@+id/btnVerRegistros"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="telefono"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/txt_provider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Provider"
-        android:textSize="20sp" />
+        android:onClick="irRegistros"
+        android:text="Ver registros" />
 
     <Button
         android:id="@+id/btn_logout"
